added mouse for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,10 +13,6 @@
 #supposedly fixes pausing in vim
 set-option -sg escape-time 1
 
-
-#Enable mouse in iTerm
-set -g mouse on
-
 # look good
 set -g default-terminal "screen-256color"
 
@@ -29,6 +25,7 @@ set -g visual-activity on
 #bind-key -r H resize-pane -L 5
 #bind-key -r L resize-pane -R 5
 
+set -g mouse-select-pane on
 
 # pane decorations
 set-option -g pane-border-fg green
